<resources>
    <string name="app_name">Pedidos Valois</string>
    <string name="title_activity_lista_articulos">Lista Articulos Ferreteros</string>
    <string name="action_acerca">Acerca de la App</string>
    <string name="action_micodigo">Mi codigo</string>
    <string name="action_sincroniza">Descargar Lista de Articulos</string>
    <string name="lista_articulo_buscar">Buscar...</string>
    <string name="server_url">http://valois222-001-site2.ctempurl.com/project_api_rest_lumen/public/users/</string>
    <string name="item_textview_simple_title">Simple Title Text Simple Title Text Simple Title Text Simple Title Text Simple Title Text</string>
    <string name="item_textview_simple_content">Un libro (del latín liber, libri) es una obra impresa, manuscrita o pintada en una serie de hojas de papel, pergamino, vitela u otro material, unidas por un lado (es decir, encuadernadas) y protegidas con tapas, también llamadas cubiertas. Un libro puede tratar sobre cualquier tema.</string>
    <string name="item_textview_simple_precio">S/. 0.00</string>
    <string name="lista_articulo_dialog_title_acerca">Acerca de la App</string>
    <string name="lista_articulo_dialog_ok">Ok</string>
    <string name="ingresarcantidad_dialog_textinputedidtext">Cantidad</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Carrito</string>
    <string name="title_notifications">Pedidos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_modo">Cambiar de color</string>
    <string name="carrito_texview_carrito">Mueve hacia abajo para buscar en memoria</string>
    <string name="loading_texto_inicio">Preparando articulos descargados</string>
    <string name="loading_texto_carrito">Preparando carrito</string>
    <string name="loading_texto_pedidos">Preparando pedidos</string>
    <string name="lista_articulo_snackbar_agregar1">Se agregó</string>
    <string name="lista_articulo_snackbar_agregar2">al carrito.</string>
    <string name="carrito_button_guardar">Guardar Pedido</string>
    <string name="ingresarpedidocab_dialog_textinputedidtext_nombre">Nombre</string>
    <string name="ingresarpedidocab_dialog_textinputedidtext_telefono">Teléfono</string>
    <string name="ingresarpedidocab_dialog_textinputedidtext_ruc">Ruc</string>
    <string name="ingresarpedidocab_dialog_textinputedidtext_ruc_help">(*)Opcional.</string>
    <string name="lista_articulo_snackbar_savepedido">Se registro un nuevo pedido correctamente.</string>
    <string name="bottom_sheet_title">Opciones</string>
    <string name="bottom_sheet_editar">Editar</string>
    <string name="bottom_sheet_eliminar">Eliminar</string>
    <string name="menu_item_carrito_opciones">Opciones</string>
    <string name="menu_item_carrito_editar">Editar</string>
    <string name="menu_item_carrito_eliminar">Eliminar</string>
    <string name="inicio_button_agregar">Agregar</string>
    <string name="lista_articulo_snackbar_elimina">Se eliminó un articulo del carrito correctamente.</string>
    <string name="lista_articulo_dialog_title_setting">Mi código</string>
    <string name="lista_articulo_dialog_title_info">Información</string>
    <string name="lista_articulo_dialog_msj_carrito_vacio">Antes de guardar debe llenar el carrito.</string>
    <string name="lista_articulo_snackbar_modifico">Se modificó la cantidad correctamente.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ubicacion_pedido">Map</string>
</resources>
