<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">


    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/card_bg"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:maxWidth="230dp"
            android:text="@string/item_textview_simple_title"
            android:textColor="@color/title_text_color"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nombre"
            android:layout_alignStart="@+id/tv_nombre"
            android:layout_alignLeft="@+id/tv_nombre"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_content1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:lineSpacingExtra="8dp"
                android:text="@string/item_textview_simple_content"
                android:textColor="@color/content_text_color" />

            <TextView
                android:id="@+id/tv_content2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:lineSpacingExtra="8dp"
                android:text="@string/item_textview_simple_content"
                android:textColor="@color/content_text_color" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/item_textview_simple_precio"
            android:textColor="@color/content_text_color" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_cliente"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_foto_man"
        app:layout_constraintEnd_toStartOf="@+id/rl_content"
        app:layout_constraintStart_toStartOf="@+id/rl_content"
        app:layout_constraintTop_toTopOf="@+id/rl_content" />


</android.support.constraint.ConstraintLayout>