<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">


    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/card_bg"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:maxWidth="200dp"
            android:text="@string/item_textview_simple_title"
            android:textColor="@color/title_text_color"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_alignStart="@+id/tv_title"
            android:layout_alignLeft="@+id/tv_title"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_content1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:lineSpacingExtra="8dp"
                android:text="@string/item_textview_simple_content"
                android:textColor="@color/content_text_color" />

            <TextView
                android:id="@+id/tv_content2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:lineSpacingExtra="8dp"
                android:text="@string/item_textview_simple_content"
                android:textColor="@color/content_text_color" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/item_textview_simple_precio"
            android:textColor="@color/content_text_color" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_arti"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/circlebackgroundblack"
        app:layout_constraintEnd_toStartOf="@+id/rl_content"
        app:layout_constraintStart_toStartOf="@+id/rl_content"
        app:layout_constraintTop_toTopOf="@+id/rl_content" />

    <TextView
        android:id="@+id/tv_nro_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/rl_content"
        app:layout_constraintStart_toStartOf="@+id/rl_content"
        app:layout_constraintTop_toTopOf="@+id/rl_content" />


    <ImageView
        android:id="@+id/iv_agregar_carrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_add_shopping_cart_white_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/iv_opcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_dots_vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>